mongo/react-express-mongodb-react-express-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: react-express-mongodb-react-express
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/react-express-mongodb-react-express: "true"
  podSelector:
    matchLabels:
      io.kompose.network/react-express-mongodb-react-express: "true"
